[package]
name = "wplace-archive-world-map"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
png = "0.18.0"
zstd = "0.13.3"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
crc32fast = "1.3"
tar = "0.4"
flate2 = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
rayon = "1.11.0"

[features]
default = ["full"]
sqlite = ["rusqlite"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
# Full build with all features (CLI + library)
full = ["sqlite", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

